@@ -292,7 +292,7 @@ public class SuppressionCommentFilterTest
 
     @Test
     public void testEqualsAndHashCodeOfTagClass() {
-        final Object tag = getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:OFF").get(0);
+        final Object tag = getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:OFF").getFirst();
         final EqualsVerifierReport ev = EqualsVerifier.forClass(tag.getClass())
                 .usingGetClass().report();
         assertWithMessage("Error: %s", ev.getMessage())
@@ -302,7 +302,7 @@ public class SuppressionCommentFilterTest
 
     @Test
     public void testToStringOfTagClass() {
-        final Object tag = getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:OFF").get(0);
+        final Object tag = getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:OFF").getFirst();
         assertWithMessage("Invalid toString result")
             .that(tag.toString())
             .isEqualTo("Tag[text='CHECKSTYLE:OFF', line=1, column=0, type=OFF,"
@@ -314,7 +314,7 @@ public class SuppressionCommentFilterTest
         final SuppressionCommentFilter filter = new SuppressionCommentFilter();
         filter.setMessageFormat(".*");
         final Object tag =
-                getTagsAfterExecution(filter, "filename", "//CHECKSTYLE:ON").get(0);
+                getTagsAfterExecution(filter, "filename", "//CHECKSTYLE:ON").getFirst();
         assertWithMessage("Invalid toString result")
             .that(tag.toString())
             .isEqualTo("Tag[text='CHECKSTYLE:ON', line=1, column=0, type=ON,"
@@ -326,7 +326,7 @@ public class SuppressionCommentFilterTest
         final SuppressionCommentFilter filter = new SuppressionCommentFilter();
         filter.setIdFormat("id");
         final Object tag =
-                getTagsAfterExecution(filter, "filename", "//CHECKSTYLE:OFF").get(0);
+                getTagsAfterExecution(filter, "filename", "//CHECKSTYLE:OFF").getFirst();
         assertWithMessage("Invalid toString result")
             .that(tag.toString())
             .isEqualTo("Tag[text='CHECKSTYLE:OFF', line=1, column=0, type=OFF,"
@@ -337,16 +337,16 @@ public class SuppressionCommentFilterTest
     public void testCompareToOfTagClass() {
         final List<Comparable<Object>> tags1 =
                 getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:OFF", " //CHECKSTYLE:ON");
-        final Comparable<Object> tag1 = tags1.get(0);
+        final Comparable<Object> tag1 = tags1.getFirst();
         final Comparable<Object> tag2 = tags1.get(1);
 
         final List<Comparable<Object>> tags2 =
                 getTagsAfterExecutionOnDefaultFilter(" //CHECKSTYLE:OFF");
-        final Comparable<Object> tag3 = tags2.get(0);
+        final Comparable<Object> tag3 = tags2.getFirst();
 
         final List<Comparable<Object>> tags3 =
                 getTagsAfterExecutionOnDefaultFilter("//CHECKSTYLE:ON");
-        final Comparable<Object> tag4 = tags3.get(0);
+        final Comparable<Object> tag4 = tags3.getFirst();
 
         assertWithMessage("Invalid comparing result")
                 .that(tag1.compareTo(tag2) < 0)
